Remove cookies do back-end