@@ -23,7 +23,7 @@ public class JwtRequestFilter extends OncePerRequestFilter {
     private final JwtUtil jwtUtil;
     private final UserDetailsService userDetailsService;
 
-    private static final List<String> PUBLIC_PATHS = Arrays.asList(
+    private static final List<String> PUBLIC_PATHS = List.of(
             "/auth/login",
             "/auth/register",
             "/swagger-ui",
@@ -36,8 +36,11 @@ public class JwtRequestFilter extends OncePerRequestFilter {
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
-            throws ServletException, IOException {
+    protected void doFilterInternal(
+            HttpServletRequest request,
+            HttpServletResponse response,
+            FilterChain filterChain
+    ) throws ServletException, IOException {
 
         String requestPath = request.getRequestURI();
 
@@ -46,58 +49,44 @@ public class JwtRequestFilter extends OncePerRequestFilter {
             return;
         }
 
-        String jwt = null;
-        String username = null;
+        String authorizationHeader = request.getHeader("Authorization");
 
-        jwt = extractTokenFromCookie(request);
+        if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
+            String jwt = authorizationHeader.substring(7);
 
-        if (jwt == null) {
-            final String authorizationHeader = request.getHeader("Authorization");
-            if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
-                jwt = authorizationHeader.substring(7);
-            }
-        }
-
-        if (jwt != null) {
             try {
-                username = jwtUtil.extractUsername(jwt);
-            } catch (Exception e) {
+                String username = jwtUtil.extractUsername(jwt);
+
+                if (username != null &&
+                        SecurityContextHolder.getContext().getAuthentication() == null) {
+
+                    UserDetails userDetails =
+                            userDetailsService.loadUserByUsername(username);
+
+                    if (jwtUtil.validateToken(jwt, userDetails.getUsername())) {
+                        UsernamePasswordAuthenticationToken authentication =
+                                new UsernamePasswordAuthenticationToken(
+                                        userDetails,
+                                        null,
+                                        userDetails.getAuthorities()
+                                );
+
+                        authentication.setDetails(
+                                new WebAuthenticationDetailsSource().buildDetails(request)
+                        );
+
+                        SecurityContextHolder.getContext().setAuthentication(authentication);
+                    }
+                }
+
+            } catch (Exception ignored) {
             }
         }
-
-        if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-            UserDetails userDetails = this.userDetailsService.loadUserByUsername(username);
-
-            if (jwtUtil.validateToken(jwt, userDetails.getUsername())) {
-                UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
-                authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                SecurityContextHolder.getContext().setAuthentication(authentication);
-            }
-        }
-
-        UserDetails userDetails = userDetailsService.loadUserByUsername(username);
-        System.out.println("DEBUG: principal = " + userDetails.getClass());
-
 
         filterChain.doFilter(request, response);
     }
 
     private boolean isPublicPath(String requestPath) {
         return PUBLIC_PATHS.stream().anyMatch(requestPath::startsWith);
-    }
-
-    private String extractTokenFromCookie(HttpServletRequest request) {
-        Cookie[] cookies = request.getCookies();
-
-        if (cookies != null) {
-            for (Cookie cookie : cookies) {
-                if ("access_token".equals(cookie.getName())) {
-                    return cookie.getValue();
-                }
-            }
-        }
-
-        return null;
     }
 }
